[gd_scene load_steps=4 format=2]

[ext_resource path="res://Data/Scripts/SifaModule.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sounds/SiFa.ogg" type="AudioStream" id=2]
[ext_resource path="res://Data/Scripts/Sifa_Debug_Monitor.gd" type="Script" id=3]

[node name="SifaModule" type="Node"]
pause_mode = 1
script = ExtResource( 1 )

[node name="SifaTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="WarningTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="SifaSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="DEBUG" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="DEBUG"]
margin_left = 60.0
margin_top = 256.0
margin_right = 140.269
margin_bottom = 285.631
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="DEBUG/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 142.0
margin_bottom = 93.0
columns = 2

[node name="SifaTimer_Label" type="Label" parent="DEBUG/PanelContainer/GridContainer"]
margin_right = 131.0
margin_bottom = 14.0
text = "Sifa Timer: "

[node name="SifaTimer" type="Label" parent="DEBUG/PanelContainer/GridContainer"]
margin_left = 135.0
margin_right = 135.0
margin_bottom = 14.0

[node name="WarningTimer_Label" type="Label" parent="DEBUG/PanelContainer/GridContainer"]
margin_top = 18.0
margin_right = 131.0
margin_bottom = 32.0
text = "Warning Timer: "

[node name="WarningTimer" type="Label" parent="DEBUG/PanelContainer/GridContainer"]
margin_left = 135.0
margin_top = 18.0
margin_right = 135.0
margin_bottom = 32.0

[node name="Reset_Label" type="Label" parent="DEBUG/PanelContainer/GridContainer"]
margin_top = 36.0
margin_right = 131.0
margin_bottom = 50.0
text = "Was Reset?: "

[node name="Reset" type="Label" parent="DEBUG/PanelContainer/GridContainer"]
margin_left = 135.0
margin_top = 36.0
margin_right = 135.0
margin_bottom = 50.0

[node name="Stage_label" type="Label" parent="DEBUG/PanelContainer/GridContainer"]
margin_top = 54.0
margin_right = 131.0
margin_bottom = 68.0
text = "Stage: "

[node name="Stage" type="Label" parent="DEBUG/PanelContainer/GridContainer"]
margin_left = 135.0
margin_top = 54.0
margin_right = 135.0
margin_bottom = 68.0

[node name="enforceBrakes_label" type="Label" parent="DEBUG/PanelContainer/GridContainer"]
margin_top = 72.0
margin_right = 131.0
margin_bottom = 86.0
text = "Emergency Brakes?: "

[node name="enforceBrakes" type="Label" parent="DEBUG/PanelContainer/GridContainer"]
margin_left = 135.0
margin_top = 72.0
margin_right = 135.0
margin_bottom = 86.0

[connection signal="timeout" from="SifaTimer" to="." method="_on_SifaTimer_timeout"]
